[gd_scene load_steps=8 format=3 uid="uid://ceplc5tihniit"]

[ext_resource type="Script" uid="uid://dl24h6jafdtvj" path="res://Scripts/shield.gd" id="1_afmmn"]
[ext_resource type="Shader" uid="uid://dqotus2mulu21" path="res://Resources/Theme/ink_blot.gdshader" id="1_oux8c"]
[ext_resource type="Texture2D" uid="uid://cdkvuk6dptr1n" path="res://Assets/shield.png" id="2_afmmn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v0uwj"]
radius = 41.109608

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kxn5r"]
noise_type = 3
frequency = 0.032

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_d18dt"]
noise = SubResource("FastNoiseLite_kxn5r")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2qcxp"]
shader = ExtResource("1_oux8c")
shader_parameter/percentage = 0.999999977648
shader_parameter/burn_texture = SubResource("NoiseTexture2D_d18dt")
shader_parameter/layer_1 = Color(0.2, 0.2, 0.2, 1)
shader_parameter/size_1 = 0.05
shader_parameter/layer_2 = Color(0, 0, 0, 1)
shader_parameter/size_2 = 0.05
shader_parameter/layer_3 = Color(0, 0, 0, 1)
shader_parameter/size_3 = 0.05

[node name="Shield" type="Area2D"]
collision_layer = 32
collision_mask = 4
script = ExtResource("1_afmmn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_v0uwj")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_2qcxp")
texture = ExtResource("2_afmmn")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
